[ADD] pms: add room and room type to search view

--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -914,6 +914,8 @@
                         ('mobile', 'ilike', self),
                     ]"
                 />
+                <field name="preferred_room_id" />
+                <field name="room_type_id" />
                 <field name="partner_id" />
                 <field name="folio_id" />
                 <field name="agency_id" />
