[WIP] pms: working on folio sale lines with table_query

--- a/pms/views/pms_folio_views.xml
+++ b/pms/views/pms_folio_views.xml
@@ -817,12 +817,12 @@
                         enable_counters="1"
                         icon="fa-building"
                     />
-                    <field
-                        name="pms_property_id"
-                        string="Property"
-                        enable_counters="1"
-                        icon="fa-h-square"
-                    />
+<!--                    <field-->
+<!--                        name="pms_property_id"-->
+<!--                        string="Property"-->
+<!--                        enable_counters="1"-->
+<!--                        icon="fa-h-square"-->
+<!--                    />-->
                     <field
                         name="state"
                         string="State"
