--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -1072,12 +1072,12 @@
                     />
                 </group>
                 <searchpanel>
-                    <field
-                        name="pms_property_id"
-                        string="Property"
-                        enable_counters="1"
-                        icon="fa-h-square"
-                    />
+<!--                    <field-->
+<!--                        name="pms_property_id"-->
+<!--                        string="Property"-->
+<!--                        enable_counters="1"-->
+<!--                        icon="fa-h-square"-->
+<!--                    />-->
                     <field
                         name="state"
                         string="State"
