[IMP] pms_w_s: rooms date search
Input are now required, to avoid user entering only one date an not the
other.

A button has been added to reset the date search.

--- a/pms_website_sale/templates/pms_room_type_templates.xml
+++ b/pms_website_sale/templates/pms_room_type_templates.xml
@@ -50,6 +50,7 @@
                         type="date"
                         class="form-control"
                         name="start_date"
+                        required="required"
                         t-att-value="start_date"
                     />
                 </div>
@@ -59,9 +60,16 @@
                         type="date"
                         class="form-control"
                         name="end_date"
+                        required="required"
                         t-att-value="end_date"
                     />
                 </div>
+                <a
+                    class="btn"
+                    t-att-href="url_generator('/rooms', start_date='', end_date='')"
+                >
+                    <span class="fa fa-trash" />
+                </a>
                 <button type="submit" class="btn btn-primary">Search</button>
             </div>
         </form>
